GNOME Bugzilla – Bug 755140
gstgl: Fix GError leaks during failures
Last modified: 2015-09-17 09:53:10 UTC
There are a few instances where GError is not getting freed during failure cases. Handling all those in a single patch
Created attachment 311517 [details] [review] fix error leaks
commit 00438fdff0321495df5095dd68509809a8c56663 Author: Vineeth T M <vineeth.tm@samsung.com> Date: Thu Sep 17 13:35:02 2015 +0900 gl: Fix GError leaks during failures https://bugzilla.gnome.org/show_bug.cgi?id=755140