gl: Fix GError leaks during failures

https://bugzilla.gnome.org/show_bug.cgi?id=755140